--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sx-4 col-md-6 col-lg-4">
+    <div class="col-sx-12 col-md-4 col-lg-4">
       <div class="card">
         <img src="img/search.svg" alt="">
         <h3>Cerca</h3>
         <p>Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti</p>
       </div>
     </div>
-    <div class="col-sx-4 col-md-6 col-lg-4">
+    <div class="col-sx-12 col-md-4 col-lg-4">
       <div class="card">
       <img src="img/letter.svg" alt="">
       <h3>Contatta</h3>
@@ -60,7 +60,7 @@
       </p>
     </div>
   </div>
-  <div class="col-sx-4 col-md-6 col-offset-md-3 col-lg-4">
+  <div class="col-sx-12 col-md-4 col-lg-4">
       <div class="card">
       <img src="img/male.svg" alt="">
          <h3>Inizia a Suonare</h3>
@@ -74,7 +74,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sx-12 col-md-4 col-lg-4 ">
+    <div class="col-sx-12 col-md-4  col-lg-4 ">
       <div class="card">
         <img src="img/icon/profile.png" alt="">
            <h3>La più grande scuola d'Italia</h3>
@@ -82,7 +82,7 @@
            <hr>
     </div>
     </div>
-    <div class="col-sx-12 col-md-4 col-lg-4 ">
+    <div class="col-sx-12 col-md-4 col-offset-md-4  col-lg-4 ">
       <div class="card">
         <img src="img/icon/secure.png" alt="">
           <h3>Soddisfazione Garantita</h3>
@@ -90,13 +90,14 @@
           <hr>
       </div>
     </div>
-    <div class="col-sx-12 col-md-4 col-lg-4 col-">
+    <div class="col-sx-12 col-md-4 col-offset-md-4  col-lg-4 col-">
       <div class="card">
         <img src="img/icon/flex.png" alt="">
           <h3>Flessibile e Conveniente</h3>
           <p>
             Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.
           </p>
+          <hr>
       </div>
 
     </div>
