--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="row ">
-      <div class="col-sx-12 col-lg-6 ">
+      <div class="col-xs-12 col-lg-6 ">
         <div class="card">
           <img src="img/icon/maps.png" alt="">
           <h3>A casa tua</h3>
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-    <div class="col-sx-12 col-lg-6">
+    <div class="col-xs-12 col-lg-6">
       <div class="card">
         <img src="img/icon/screen.png" alt="">
         <h3>Online</h3>
@@ -44,14 +44,14 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sx-12 col-md-4 col-lg-4">
+    <div class="col-xs-12 col-md-4 col-lg-4">
       <div class="card">
         <img src="img/search.svg" alt="">
         <h3>Cerca</h3>
         <p>Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti</p>
       </div>
     </div>
-    <div class="col-sx-12 col-md-4 col-lg-4">
+    <div class="col-xs-12 col-md-4 col-lg-4">
       <div class="card">
       <img src="img/letter.svg" alt="">
       <h3>Contatta</h3>
@@ -60,21 +60,22 @@
       </p>
     </div>
   </div>
-  <div class="col-sx-12 col-md-4 col-lg-4">
+  <div class="col-xs-12 col-md-4 col-lg-4">
       <div class="card">
       <img src="img/male.svg" alt="">
+
          <h3>Inizia a Suonare</h3>
          <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!</p>
     </div>
   </div>
   </div>
   <div class="row">
-    <div class="col-sx-12 col-lg-12">
+    <div class="col-xs-12 col-lg-12">
       <h1>Perchè Cademi?</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-sx-12 col-md-4  col-lg-4 ">
+    <div class="col-xs-12 col-md-4 col-offset-md-2  col-lg-4 ">
       <div class="card">
         <img src="img/icon/profile.png" alt="">
            <h3>La più grande scuola d'Italia</h3>
@@ -82,7 +83,7 @@
            <hr>
     </div>
     </div>
-    <div class="col-sx-12 col-md-4 col-offset-md-4  col-lg-4 ">
+    <div class="col-xs-12  col- col-md-4    col-lg-4 ">
       <div class="card">
         <img src="img/icon/secure.png" alt="">
           <h3>Soddisfazione Garantita</h3>
@@ -90,7 +91,7 @@
           <hr>
       </div>
     </div>
-    <div class="col-sx-12 col-md-4 col-offset-md-4  col-lg-4 col-">
+    <div class="col-xs-12 col-md-4 col-offset-md-4    col-lg-4 col-">
       <div class="card">
         <img src="img/icon/flex.png" alt="">
           <h3>Flessibile e Conveniente</h3>
